--- a/CLOUD_TRAINING/.settings/org.talend.repository.prefs
+++ b/CLOUD_TRAINING/.settings/org.talend.repository.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+repository.project.branch=main
 repository.project.id=enc\:migration.token.encryption.key\:FG7vXJxfS8TJeerM3uDC9NMelHUdmzrW/rynR2ndRlrYy+zIQVdP/CE\=
